Fix width of wrapper on small devices by limiting it to 100%

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -223,6 +223,7 @@ hr {
 .wrapper {
   box-sizing: border-box;
   max-width: $content-width;
+  width: 100%;
   margin-right: auto;
   margin-left: auto;
   padding-right: $spacing-unit;
